Responsive bugs. Menu-ham not visible on phone, VE-phone-banner overflows container, ADAS icons not wrapping

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9817,12 +9817,11 @@ html, body {
   width: 100%;
   max-width: 100%;
   box-shadow: none;
-  background-color: white;
+  background-color: #fff;
   position: fixed;
   height: 60px !important;
   overflow: hidden;
-  z-index: 10;
-  padding-left: 5.5%; }
+  z-index: 10; }
 
 .menu-container {
   height: 100%;
@@ -9879,12 +9878,11 @@ html, body {
   padding: 6px 15px; }
 
 .menu__icon-body {
+  position: static;
   transition: all 0.3s;
   height: auto;
   width: 22px;
-  position: absolute;
   z-index: 99;
-  right: 5.5%;
   margin-top: 22.5px;
   margin-bottom: 0;
   box-sizing: border-box;
@@ -10709,7 +10707,8 @@ html, body {
   width: 66%;
   padding: 30px;
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  overflow-x: hidden; }
 
 .banner-advanced .banner-advanced__column-2 {
   width: 33%;
@@ -11026,6 +11025,7 @@ html, body {
 .banner-drivesafe .banner-drivesafe__sensors-cont .icons-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 50px 0; }
 
 .banner-drivesafe .banner-drivesafe__sensors-cont .icons-container .icon {
