--- a/app/scss/custom/views/_machine-learning.scss
+++ b/app/scss/custom/views/_machine-learning.scss
@@ -235,6 +235,7 @@
       .icons-container {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         padding: 50px 0;
         .icon {
           width: 70px;
