--- a/app/scss/custom/views/_video-expertise.scss
+++ b/app/scss/custom/views/_video-expertise.scss
@@ -174,6 +174,7 @@ $left-aligment: 260px;
     padding: 30px;
     display: flex;
     flex-direction: row;
+    overflow-x: hidden;
   }
   .banner-advanced__column-2 {
     width: 33%;
